--- a/CSS/produtos.css
+++ b/CSS/produtos.css
@@ -176,7 +176,7 @@ main {
     font-weight: bold;
 }
 
-.bt-comprar button{
+.bt-comprar button {
     background: #198754;
     width: 280px;
     height: 200px;
@@ -229,4 +229,101 @@ main {
     margin-left: 25px;
     margin-right: 10px;
     margin-top: 5px;
+}
+
+@media only screen and (max-device-width:900px){
+    body {
+        background: url(../IMG/page-produtos/background.svg);
+        background-size: 400%;
+        background-attachment: fixed;
+    }
+
+    .fundo-azul-carrosel {
+        width: 300px;
+        margin-left: 55px;
+        height: 420px;
+    }
+
+    .parte-branca-descricao-produto {
+        width: 200px;
+        height: 240px;
+        display: block;
+    }
+
+    .carousel {
+        margin-left: 50px;
+    }
+
+    .parte-branca-descricao-produto div h2 {
+        font-size: 15px;
+    }
+
+    .parte-branca-descricao-produto div:nth-child(1) p {
+        font-size: 15px;
+    }
+
+    .parte-branca-descricao-produto div:nth-child(1) {
+        width: 100%;
+    }
+
+    .parte-branca-descricao-produto div:nth-child(2) h2 {
+        margin-left: 42px;
+    }
+
+    .parte-branca-descricao-produto div:nth-child(2) button {
+        margin-left: 35px;
+    }
+
+    .fundo-azul-segundaParte {
+        width: 300px;
+        height:540px;
+        margin-left: 55px;
+    }
+
+    .parte-branca-escolha-cotas {
+        width: 260px;
+        height: 420px;
+        margin-left: 23px;
+        display: block;
+    }
+
+    .cotas p {
+        font-size: 12px;
+        font-weight: bold;
+        margin-left: 12px;
+    }
+
+    .cotas button {
+        width: 150px;
+        height: 38px;
+        font-size: 15px;
+    } 
+
+    .bt-comprar button {
+        width: 200px;
+        height: 100px;
+        font-size: 5px;
+        margin-top: 0;
+    }
+
+    .bt-comprar button p {
+        font-size: 12px;
+    }
+
+    .bt-comprar button a {
+        font-size: 30px;
+    }
+
+    .flex-input-but input {
+        width: 70px;
+        height: 35px;
+    }
+
+    .flex-input-but button {
+        width: 40px;
+        height: 40px;
+        margin-left: 20px;
+        font-size: 10px;
+    }
+    
 }
